--- a/Projects/project1.qmd
+++ b/Projects/project1.qmd
@@ -36,8 +36,7 @@ import plotly.express as px
 
 ## Elevator pitch
 
-_paste your elevator pitch here_
-_A SHORT (4-5 SENTENCES) PARAGRAPH THAT `DESCRIBES KEY INSIGHTS` TAKEN FROM METRICS IN THE PROJECT RESULTS THINK TOP OR MOST IMPORTANT RESULTS._
+_From the data that I was given, I was able to find some facinating inferences about the data. I was able to see that my name Sebastian started to become popular after the year 2000. I also wanted to see if there was any influence on the name Luke during the time that Star Wars was recently released. I found that the years after, the name did seem to become poplar._
 
 ```{python}
 #| label: project data
@@ -46,18 +45,6 @@ _A SHORT (4-5 SENTENCES) PARAGRAPH THAT `DESCRIBES KEY INSIGHTS` TAKEN FROM METR
 df = pd.read_csv("https://github.com/byuidatascience/data4names/raw/master/data-raw/names_year/names_year.csv")
 ```
 
-```{python}
-
-name_fel = df.query("name == 'Felisha'")
-
-fig = name_fel.filter(["name", "year", "Total"])
-fig1 = px.bar(name_fel,
-    x = "year",
-    y = "Total")
-
-fig1.update_xaxes(range=[1950, 2000])
-fig1
-```
 
 __Highlight the Questions and Tasks__
 
@@ -152,9 +139,12 @@ filtered_df = df[(df['name'].isin(selected_names))]
 filtered_df1 = px.bar(filtered_df,
     x = "year",
     y = "Total",
-    color = "name")
+    color = "name",
+    title = "Chistian Names By Year")
 
-filtered_df1.update_xaxes(range=[1920, 2000])
+filtered_df1.update_xaxes(range=[1920, 2000],
+                          title = "Names By Year")
+filtered_df1.update_yaxes(title = "Frequency")
 filtered_df1
 ```
 
@@ -162,7 +152,7 @@ filtered_df1
 
 __Think of a unique name from a famous movie. Plot the usage of that name and see how changes line up with the movie release. Does it look like the movie had an effect on usage?__
 
-_type your results and analysis here_
+_I waned to see how the name Luke increased after the Star Wars Saga was introduced. Star Wars is arguably one of the most famous movie series that has ever come out. Below shows the trend of the name and the lines are the release years of the 3 movies._
 
 ```{python}
 #| label: Q4
@@ -173,10 +163,13 @@ name_luke = df.query("name == 'Luke'")
 
 fig = px.bar(name_luke,
     x = "year",
-    y = "Total")
+    y = "Total",
+    title = "Is The Name Luke Related to Star Wars")
 
 
-fig.update_xaxes(range=[1975, 2015])
+fig.update_xaxes(range=[1975, 2015],
+                 title = "Babies Named Luke by Year")
+fig.update_yaxes(title = "Frequency")
 fig.update_layout(
     shapes=[
         dict(
