--- a/Projects/project2.qmd
+++ b/Projects/project2.qmd
@@ -43,22 +43,25 @@ _A SHORT (4-5 SENTENCES) PARAGRAPH THAT `DESCRIBES KEY INSIGHTS` TAKEN FROM METR
 #| label: project data
 #| code-summary: Read and format project data
 # Include and execute your code here
-df = pd.read_csv("https://github.com/byuidatascience/data4names/raw/master/data-raw/names_year/names_year.csv")
+df = pd.read_json("https://raw.githubusercontent.com/byuidatascience/data4missing/master/data-raw/flights_missing/flights_missing.json")
 ```
 
 __Highlight the Questions and Tasks__
 
 ## QUESTION|TASK 1
 
-__COPY PASTE QUESTION|TASK 1 FROM THE PROJECT HERE__
+__Fix all of the varied missing data types in the data to be consistent (all missing values should be displayed as “NaN”)__
 
 _type your results and analysis here_
+
+```{python}
+
+```
 
 ```{python}
 #| label: Q1
 #| code-summary: Read and format data
 # Include and execute your code here
-
 
 ```
 
@@ -98,7 +101,7 @@ display(mydat)
 
 ## QUESTION|TASK 2
 
-__COPY PASTE QUESTION|TASK 2 FROM THE PROJECT HERE__
+__Which airport has the worst delays?__
 
 _type your results and analysis here_
 
@@ -146,7 +149,7 @@ display(mydat)
 
 ## QUESTION|TASK 3
 
-__COPY PASTE QUESTION|TASK 3 FROM THE PROJECT HERE__
+__What is the best month to fly if you want to avoid delays of any length?__
 
 _type your results and analysis here_
 
